--- a/es/Chat/index.html
+++ b/es/Chat/index.html
@@ -117,11 +117,11 @@
   
       <div class="chat-message-left pb-4">
         <div>
-          <img src="https://tr.rbxcdn.com/c1f783e14d60950de021fd6fd4841951/150/150/AvatarHeadshot/Png" class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
+          <img src="https://tr.rbxcdn.com/f176f5a44dad814e93b9e1b8d10114e4/150/150/AvatarHeadshot/Png" class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
           <div style="color: #a3b4ff;" class="small text-nowrap mt-2">2:37 am</div>
         </div>
         <div class="flex-shrink-1    rounded py-2 px-3 ml-3">
-          <div class="font-weight-bold mb-1">Diego</div>
+          <div class="font-weight-bold mb-1">Diego Miguel</div>
           Los mensajes enviados desde el juego aparecerán aquí, recuerda: solo aparecerán los chats públicos del juego, si estás en una habitacion, tus chats no se enviaran, si estás en un juego privado, no se enviarán datos.
         </div>
       </div>
