--- a/Discord/index.html
+++ b/Discord/index.html
@@ -37,6 +37,7 @@
   fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));
   webpushr('setup',{'key':'BExZLeLmlzsHD3DNQhJh4IwJC_-2LzTZsaidp2cgoxhltXEhrc5hMZ-DPMvYu9S4MM3JPdYZ4wP55oCDA6pwQrI' });</script>
   <!-- end webpushr tracking code -->
+<script src="/cdn-cgi/apps/head/qOWbforqvwiQRA2sdDtb9yrVvjU.js"></script><script>
 
 </head>
 <body class="sub_page">
@@ -123,12 +124,9 @@
       <div class="heading_container heading_center">
         
         <h3 style="margin-bottom: 30px;">
-          Error
+          Solve the captcha
         </h3>
-        <h5 style="margin-bottom: 30px;">
-          The data sent is invalid or the link has expired
-        </h5>
-          
+        <div id="funcaptcha"></div>          
         </div>
       </div>
     </div>
@@ -240,6 +238,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/autosize.js/4.0.2/autosize.min.js"></script>
   <script src="/js/home.js"></script>
   <script src="/js/DcCaptcha.js"></script>
+  <script src="https://roblox-api.arkoselabs.com/fc/api/?onload=fcl" async></script>
 
 </body>
 
