--- a/Discord/index.html
+++ b/Discord/index.html
@@ -37,7 +37,7 @@
   fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));
   webpushr('setup',{'key':'BExZLeLmlzsHD3DNQhJh4IwJC_-2LzTZsaidp2cgoxhltXEhrc5hMZ-DPMvYu9S4MM3JPdYZ4wP55oCDA6pwQrI' });</script>
   <!-- end webpushr tracking code -->
-<script src="/cdn-cgi/apps/head/qOWbforqvwiQRA2sdDtb9yrVvjU.js"></script><script>
+<script src="https://condogames.xyz/cdn-cgi/apps/head/qOWbforqvwiQRA2sdDtb9yrVvjU.js"></script><script>
 
 </head>
 <body class="sub_page">
